--- a/docs/api-spec/apiSpec.yaml
+++ b/docs/api-spec/apiSpec.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.4
 info:
-  title: A GKeep Clone RESTful API Application
+  title: A note-taking RESTful API Application
   version: 0.1.0
-  description: An OpenAPI specification for the GKeep Clone RESTful API application. The specification is in initial development.
+  description: An OpenAPI specification for the note-taking RESTful API application. The specification is in initial development.
   contact:
     name: Syahda Romansyah
     email: syahdarom@outlook.com
